Bug#52062  Compiler warning in os0file.c on windows 64-bit